Fix overflows on mobile and add missing spanish content

--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,14 @@ a {
     @apply no-underline;
 }
 
+.markdownContent img {
+    @apply object-scale-down;
+}
+
+.markdownContent pre {
+    @apply max-w-[324px];
+}
+
 .nav > li > a {
     @apply block mb-1 hover:bg-zinc-200 dark:hover:bg-zinc-800 px-2 py-1 rounded-md no-underline text-zinc-500 hover:text-zinc-900 dark:text-zinc-400 hover:dark:text-zinc-100 transition-all;
 }
